--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.use-new-id-generator-mappings=true
+spring.jpa.show-sql=true
