--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.url=jdbc:postgresql://localhost:5432/dp333
 spring.datasource.username=postgres
-spring.datasource.password=maiden
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.hibernate.use-new-id-generator-mappings=true
-spring.jpa.show-sql=true
+debug=true
